syntax = "proto2";

import "scalapb/scalapb.proto";
//import "model/payment/paymentUser.proto";
import "google/protobuf/timestamp.proto";

package app.softnetwork.payment.model;

option (scalapb.options) = {
    single_file: true
    flat_package: true
    import: "app.softnetwork.persistence.message._"
    import: "app.softnetwork.persistence.model._"
    import: "app.softnetwork.protobuf.ScalaPBTypeMappers._"
    import: "app.softnetwork.serialization._"
    import: "app.softnetwork.payment.model._"
    preserve_unknown_fields: false
};

message KycDocument {
    enum KycDocumentStatus {
        KYC_DOCUMENT_NOT_SPECIFIED = 0;
        KYC_DOCUMENT_CREATED = 1;
        KYC_DOCUMENT_VALIDATION_ASKED = 2;
        KYC_DOCUMENT_VALIDATED = 3;
        KYC_DOCUMENT_REFUSED = 4;
        KYC_DOCUMENT_OUT_OF_DATE = 5;
    }    
    enum KycDocumentType {
        /**
         * proof of identity
         */
        KYC_IDENTITY_PROOF = 0;
        /**
         * extract from the relevant register of commerce issued within the last three months
         */
        KYC_REGISTRATION_PROOF = 1; 
        /**
         * Up-to-date signed statutes
         */
        KYC_ARTICLES_OF_ASSOCIATION = 2;
        /**
         * Beneficial Owner Declaration
         */
        KYC_SHAREHOLDER_DECLARATION = 3;
        /**
         * proof of address
         */
        KYC_ADDRESS_PROOF = 4;
        /**
         * additional requirement
         */
        KYC_ADDITIONAL_REQUIREMENT = 5;
    }
    option (scalapb.message).extends = "ProtobufDomainObject";
    option (scalapb.message).extends = "KycDocumentDecorator";
    required KycDocumentType type = 1 [default = KYC_IDENTITY_PROOF];
    required KycDocumentStatus status = 2 [default = KYC_DOCUMENT_NOT_SPECIFIED];
    optional string id = 3;
    optional string refusedReasonType = 4;
    optional string refusedReasonMessage = 5;
    optional google.protobuf.Timestamp createdDate = 6 [(scalapb.field).type = "java.util.Date"];
    optional google.protobuf.Timestamp lastUpdated = 7 [(scalapb.field).type = "java.util.Date"];
    optional string kycDocumentSubType = 8;
}

message UboDeclaration {
    message UltimateBeneficialOwner{
        message BirthPlace{
            option (scalapb.message).extends = "ProtobufDomainObject";
            required string city = 1;
            required string country = 2 [default = "FR"];
        }
        option (scalapb.message).extends = "ProtobufDomainObject";
        option (scalapb.message).extends = "UltimateBeneficialOwnerDecorator";
        optional string id = 1;
        required string firstName = 2;
        required string lastName = 3;
        required string birthday = 4;
        required string nationality = 5 [default = "FR"];
        required string address = 6;
        required string city = 7;
        required string postalCode = 8;
        required string region = 9 [default = "Ile de France"];
        required string country = 10 [default = "FR"];
        required BirthPlace birthPlace = 11;
        required bool active = 12;
        optional double percentOwnership = 13;
        optional string email = 14;
        optional string phone = 15;
    }
    
    enum UboDeclarationStatus {
        UBO_DECLARATION_CREATED = 0;
        UBO_DECLARATION_VALIDATION_ASKED = 1;
        UBO_DECLARATION_INCOMPLETE = 2;
        UBO_DECLARATION_VALIDATED = 3;
        UBO_DECLARATION_REFUSED = 4;
    }
    option (scalapb.message).extends = "ProtobufDomainObject";
    option (scalapb.message).extends = "UboDeclarationDecorator";
    required string id = 1;
    required UboDeclarationStatus status = 2 [default = UBO_DECLARATION_CREATED];
    optional string reason = 3;
    optional string message = 4;
    optional google.protobuf.Timestamp createdDate = 5 [(scalapb.field).type = "java.util.Date"];
    repeated UltimateBeneficialOwner ubos = 6;
}

message KycDocumentValidationReport{
    option (scalapb.message).extends = "ProtobufDomainObject";
    required string id = 1;
    required KycDocument.KycDocumentType type = 2;
    required KycDocument.KycDocumentStatus status = 3;
    optional string tag = 4;
    optional string refusedReasonType = 5;
    optional string refusedReasonMessage = 6;
}
