syntax = "proto2";

import "scalapb/scalapb.proto";
import "google/protobuf/timestamp.proto";
import "model/payment/card.proto";
import "model/payment/document.proto";
import "model/payment/transaction.proto";
import "model/payment/address.proto";

package app.softnetwork.payment.model;

option (scalapb.options) = {
    single_file: true
    flat_package: true
    import: "app.softnetwork.persistence.message._"
    import: "app.softnetwork.persistence.model._"
    import: "app.softnetwork.protobuf.ScalaPBTypeMappers._"
    import: "app.softnetwork.serialization._"
    import: "app.softnetwork.payment.model._"
    preserve_unknown_fields: false
};

message Mandate {
    enum MandateStatus {
        // the mandate has been created
        MANDATE_CREATED = 0;
        // the mandate has been submitted to the banks and you can now do payments with this mandate
        MANDATE_SUBMITTED = 1;
        // the mandate is active and has been accepted by the banks and/or successfully used in a payment
        MANDATE_ACTIVATED = 2;
        // the mandate has failed for a variety of reasons and is no longer available for payments
        MANDATE_FAILED = 3;
        // the mandate is expired and is not longer available for payments
        MANDATE_EXPIRED = 4;
        // the mandate has been cancelled by the user
        MANDATE_CANCELLED = 5;
        // the mandate is pending for validation
        MANDATE_PENDING = 6;
    }
    enum MandateScheme {
        MANDATE_BACS = 1;
        MANDATE_SEPA = 2;
    }
    option (scalapb.message).extends = "ProtobufDomainObject";
    option (scalapb.message).extends = "MandateDecorator";
    required string id = 1;
    required google.protobuf.Timestamp createdDate = 2 [(scalapb.field).type = "java.util.Date"];
    required google.protobuf.Timestamp lastUpdated = 3 [(scalapb.field).type = "java.util.Date"];
    required MandateStatus mandateStatus = 4;
    required MandateScheme mandateScheme = 5 [default = MANDATE_SEPA];
    optional string resultCode = 6;
    optional string resultMessage = 7;
}

message BankAccount {
    option (scalapb.message).extends = "ProtobufDomainObject";
    option (scalapb.message).extends = "BankAccountDecorator";
    option (scalapb.message).companion_extends = "BankAccountCompanion";
    required string userId = 1;
    required google.protobuf.Timestamp createdDate = 2 [(scalapb.field).type = "java.util.Date"];
    required google.protobuf.Timestamp lastUpdated = 3 [(scalapb.field).type = "java.util.Date"];
    optional string id = 4;
    required string ownerName = 5;
    required Address ownerAddress = 6;
    required string iban = 7;
    required string bic = 8;
    required bool encoded = 9 [default = false];
    required bool active = 10 [default = true];
    required string externalUuid = 11;
    optional string mandateId = 12;
    optional Mandate.MandateStatus mandateStatus = 13;
    optional Mandate.MandateScheme mandateScheme = 14 [default = MANDATE_SEPA];
    optional string countryCode = 15;
    optional string currency = 16;
}

message NaturalUser {
    enum NaturalUserType {
        PAYER = 0;
        COLLECTOR = 1;
    }
    option (scalapb.message).extends = "ProtobufDomainObject";
    option (scalapb.message).extends = "NaturalUserDecorator";
    option (scalapb.message).companion_extends = "NaturalUserCompanion";
    required string firstName = 1;
    required string lastName = 2;
    required string email = 3;
    required string nationality = 4 [default = "FR"];
    required string birthday = 5;
    required string countryOfResidence = 6 [default = "FR"];
    optional string userId = 7;
    optional string walletId = 8;
    required string externalUuid = 9;
    optional string profile = 10;
    optional NaturalUserType naturalUserType = 11;
//    optional string secondaryWalletId = 12;
    optional Address address = 13;
    optional string phone = 14;
    optional Business business = 15;
    optional string title = 16;
}

message LegalUser {
    enum LegalUserType {
        SOLETRADER = 0;
        BUSINESS = 1;
        ORGANIZATION = 2;
    }
    option (scalapb.message).extends = "ProtobufDomainObject";
    option (scalapb.message).extends = "LegalUserDecorator";
    required LegalUserType legalUserType = 1;
    required string legalName = 2;
    required string siret = 3;
    required NaturalUser legalRepresentative = 4;
    required Address legalRepresentativeAddress = 5;
    required Address headQuartersAddress = 6;
    optional UboDeclaration uboDeclaration = 7;
    optional google.protobuf.Timestamp lastAcceptedTermsOfPSP = 8 [(scalapb.field).type = "java.util.Date"];
    optional string vatNumber = 9;
    optional string phone = 10;
    optional Business business = 11;
}

/**
 *
 * @param account - uuid of the account for whom this payment account has been created, either customer, vendor or seller 
 */
message PaymentAccount {
    enum PaymentAccountStatus {
        DOCUMENTS_KO = 0;
        CHARTE_KO = 1;
        COMPTE_OK = 2;
    }
    option (scalapb.message).extends = "ProtobufDomainObject";
    option (scalapb.message).extends = "Timestamped";
    option (scalapb.message).extends = "PaymentAccountDecorator";
    required string uuid = 1;
    required google.protobuf.Timestamp createdDate = 2 [(scalapb.field).type = "java.time.Instant"];
    required google.protobuf.Timestamp lastUpdated = 3 [(scalapb.field).type = "java.time.Instant"];
    oneof user {
        NaturalUser naturalUser = 4;
        LegalUser legalUser = 5;
    }
    repeated Card cards = 6;
    optional BankAccount bankAccount = 7;
    repeated KycDocument documents = 8;
    required PaymentAccountStatus paymentAccountStatus = 9 [default = DOCUMENTS_KO];
    repeated Transaction transactions = 10;
    repeated RecurringPayment recurryingPayments = 11;
    optional string clientId = 12;
    repeated Mandate mandates = 13;
}

message Business {
    required string merchantCategoryCode = 1;
    required string website = 2;
    optional BusinessSupport support = 3;
}

message BusinessSupport {
    required string email = 1;
    optional string phone = 2;
    optional string url = 3;
}

message MandateResult{
    required string id = 1;
    required Mandate.MandateStatus status = 2;
    required string redirectUrl = 3;
    optional string resultCode = 4;
    optional string resultMessage = 5;
    optional string mandateClientSecret = 6;
    optional string mandateClientData = 7;
    optional string mandateClientReturnUrl = 8;
}

message RecurringPayment {
    enum RecurringPaymentFrequency {
        DAILY = 1;
        WEEKLY = 2;
        TWICE_A_MONTH = 3;
        MONTHLY = 4;
        BIMONTHLY = 5;
        QUARTERLY = 6;
        BIANNUAL = 7;
        ANNUAL = 8;
    }
    enum RecurringPaymentType {
        CARD = 1;
        DIRECT_DEBIT = 2;
    }
    enum RecurringCardPaymentStatus {
        CREATED = 1;
        AUTHENTICATION_NEEDED = 2;
        IN_PROGRESS = 3;
        ENDED = 4;
    }
    message RecurringCardPaymentState {
        option (scalapb.message).extends = "ProtobufDomainObject";
        required int32 numberOfRecurringPayments = 1;
        required int32 cumulatedDebitedAmount = 2;
        required int32 cumulatedFeesAmount = 3;
        required string lastPayInTransactionId = 4;
    }
    message RecurringCardPaymentResult {
        option (scalapb.message).extends = "ProtobufDomainObject";
        required string id = 1;
        required RecurringCardPaymentStatus status = 2;
        optional RecurringCardPaymentState currentstate = 3;
    }
    option (scalapb.message).extends = "ProtobufDomainObject";
    option (scalapb.message).extends = "RecurringPaymentDecorator";
    optional string id = 1;
    required google.protobuf.Timestamp createdDate = 2 [(scalapb.field).type = "java.util.Date"];
    required google.protobuf.Timestamp lastUpdated = 3 [(scalapb.field).type = "java.util.Date"];
    required int32 firstDebitedAmount = 4;
    required int32 firstFeesAmount = 5;
    required string currency = 6;
    required RecurringPaymentType type = 7 [default = CARD];
    optional RecurringCardPaymentStatus cardStatus = 8;
    optional google.protobuf.Timestamp startDate = 9 [(scalapb.field).type = "java.util.Date"];
    optional google.protobuf.Timestamp endDate = 10 [(scalapb.field).type = "java.util.Date"];
    optional RecurringPaymentFrequency frequency = 11;
    optional google.protobuf.Timestamp nextRecurringPaymentDate = 12 [(scalapb.field).type = "java.util.Date"];
    optional bool fixedNextAmount = 13;
    optional int32 nextDebitedAmount = 14;
    optional int32 nextFeesAmount = 15;
    optional string lastRecurringPaymentTransactionId = 16;
    optional google.protobuf.Timestamp lastRecurringPaymentDate = 17 [(scalapb.field).type = "java.util.Date"];
    optional int32 numberOfRecurringPayments = 18;
    optional int32 cumulatedDebitedAmount = 19;
    optional int32 cumulatedFeesAmount = 20;
    optional bool migration = 21;
    optional string cardId = 22;
    optional string statementDescriptor = 23;
    optional string externalReference = 24;
}